fix: Make the calendar scroll on overflow
fix: Make the calendar scroll on overflow

* The calendar was extending the whole page. This should fix that

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -109,6 +109,10 @@ div.react-calendar {
   border-radius: 24px;
 }
 
+div.calendar-container {
+  overflow: scroll;
+}
+
 div.card-title {
   font-weight: bold;
 }
